--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "angular-mat-datepicker": "0.0.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "json-server": "^0.14.2",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
