--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,8 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/api"
+              "src/api/data",
+              "src/app/shared/images"
             ],
             "styles": [
               "src/styles.scss"
