--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^7.0.4",
     "@angular/platform-browser-dynamic": "^7.0.4",
     "@angular/router": "^7.0.4",
+    "angular-in-memory-web-api": "^0.8.0",
     "angular-mat-datepicker": "0.0.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
