--- a/angular.json
+++ b/angular.json
@@ -20,9 +20,7 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets",
-              "src/api/data",
-              "src/app/shared/images"
+              "src/assets"
             ],
             "styles": [
               "src/styles.scss"
