--- a/package.json
+++ b/package.json
@@ -27,19 +27,19 @@
     "angular-mat-datepicker": "0.0.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
-    "json-server": "^0.14.2",
-    "rxjs": "~6.3.3",
+    "node-sass": "^4.11.0",
+    "rxjs": "6.3.3",
+    "rxjs-compat": "6.2.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "^7.0.6",
+    "@angular-devkit/build-angular": "^0.11.4",
+    "@angular/cli": "^7.1.4",
     "@angular/compiler-cli": "^7.0.4",
     "@angular/language-service": "^7.0.4",
     "@types/jasmine": "^3.3.0",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "~10.12.9",
-    "angular-in-memory-web-api": "^0.8.0",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -51,6 +51,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "typescript": "~3.1.6",
+    "angular-matchmedia": "^1.0.0"
   }
 }
